--- a/front/package.json
+++ b/front/package.json
@@ -8,22 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
-    "naive-ui": "^2.34.4",
     "@vicons/ionicons5": "^0.12.0",
-    "axios": "^1.5.0",
-    "socket.io-client": "^4.7.2",
-    "@vueuse/core": "^10.6.1",
-    "@vue-flow/core": "^1.1.1",
     "@vue-flow/background": "^1.0.5",
     "@vue-flow/controls": "^1.1.1",
+    "@vue-flow/core": "^1.1.1",
     "@vue-flow/minimap": "^1.0.5",
     "@vue-flow/node-resizer": "^1.0.5",
+    "@vueuse/core": "^10.6.1",
+    "axios": "^1.5.0",
+    "dayjs": "^1.11.9",
     "echarts": "^5.4.3",
+    "highlight.js": "^11.11.1",
+    "marked": "^16.1.2",
+    "naive-ui": "^2.34.4",
+    "pinia": "^2.1.6",
+    "socket.io-client": "^4.7.2",
+    "vue": "^3.3.4",
     "vue-echarts": "^6.6.1",
-    "dayjs": "^1.11.9"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
@@ -35,4 +37,4 @@
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
   }
-} 
+}
